--- a/_sass/moons/components/_logo.scss
+++ b/_sass/moons/components/_logo.scss
@@ -22,7 +22,7 @@
         z-index: 10;
         left: 0;
         width: 33.33%;
-        @include bp($solarsystem){
+        @include bp($tab--max){
             width: 50%;
         }
     }
@@ -30,12 +30,12 @@
         z-index: -1;
         right: 0;
         width: 66.66%;
-        @include bp($solarsystem){
+        @include bp($tab--max){
             width: 50%;
         }
         span {
             left: -33.33vw;
-            @include bp($solarsystem){
+            @include bp($tab--max){
                 left: -50vw;
             }
         }
@@ -47,13 +47,13 @@
         transform: rotate(20deg);
         height: 100vh;
         width: 100vw;
-        @include bp($galaxy){
+        @include bp($desk--max){
             transform: rotate(30deg);
         }
-        @include bp($solarsystem){
+        @include bp($tab--max){
             transform: rotate(45deg);
         }
-        @include bp($planetary){
+        @include bp($phone--max){
             transform: rotate(60deg) scale(1.5);
         }
         svg {
