--- a/_sass/moons/components/timeline/_timeline-achieve.scss
+++ b/_sass/moons/components/timeline/_timeline-achieve.scss
@@ -1,7 +1,7 @@
 /*------------------------------------*\
     ::Timeline Achieve (right/bottom)
 \*------------------------------------*/
-$bp-tab-and-big-phone: "only screen and (max-width: #{$tab--max}) and (min-width: #{$tab--min}), only screen and (max-width: 400px)";
+$bp-tab-and-big-phone: "only screen and (min-width: #{$tab--min}) and (max-width: #{$tab--max}), only screen and (max-width: #{$phone--mid})";
 .achieve {
     @extend %col;
     @extend %col--light;
@@ -9,11 +9,14 @@ $bp-tab-and-big-phone: "only screen and (max-width: #{$tab--max}) and (min-width
     @include bp($custom: $bp-tab-and-big-phone) {
         border-top: $timeline-border-width solid $color-2;
         padding: 0;
+        width: 100%;
+    }
+    @include bp($min: $tab--min, $max: $tab--max){
         margin-left: 50%;
     }
     &__group {
         position: absolute;
-        left: 0;
+        left: $timeline-width/2;
         right: 0;
         padding: 0 $gap 0 3em;
         transform: translateY(-50%);
