--- a/_sass/moons/components/timeline/__timeline-global.scss
+++ b/_sass/moons/components/timeline/__timeline-global.scss
@@ -102,33 +102,31 @@ $year-word-height:          .85em; // the height of the "20xx" word for centerin
         display: flex;
         flex-wrap: wrap;
     }
-    &:before,
-    &:after {
-       content: "";
-       display: block;
-       position: fixed;
-       z-index: 0;
-       top: 0;
-       bottom: 0;
-    }
-    &:before { // dark overlay
-display: none;
-        @extend %animation--fade-in;
-        left: 0;
-        right: 66.66%;
-        background-color: rgba($color-1-dark,.85);
-        @include bp($tab--max){
-            right: 50%;
-        }
-    }
-    &:after { // light overlay
-display: none;
-        @extend %animation--fade-in;
-        left: 33.33%;
-        right: 0;
-        background-color: rgba(#fff, .92);
-        @include bp($tab--max){
-            left: 50%;
-        }
-    }
+    // &:before,
+    // &:after {
+    //    content: "";
+    //    display: block;
+    //    position: fixed;
+    //    z-index: 0;
+    //    top: 0;
+    //    bottom: 0;
+    // }
+    // &:before { // dark overlay
+    //     @extend %animation--fade-in;
+    //     left: 0;
+    //     right: 66.66%;
+    //     background-color: rgba($color-1-dark,.85);
+    //     @include bp($tab--max){
+    //         right: 50%;
+    //     }
+    // }
+    // &:after { // light overlay
+    //     @extend %animation--fade-in;
+    //     left: 33.33%;
+    //     right: 0;
+    //     background-color: rgba(#fff, .92);
+    //     @include bp($tab--max){
+    //         left: 50%;
+    //     }
+    // }
 }
