--- a/_sass/planets/base/_animations.scss
+++ b/_sass/planets/base/_animations.scss
@@ -1,5 +1,12 @@
 /*------------------------------------*\
     ::Animations
+    ----------------------------------
+    ::Fade
+    ::Fill
+\*------------------------------------*/
+
+/*------------------------------------*\
+    ::Fade
 \*------------------------------------*/
 @keyframes fade-in {
     0% {
@@ -16,4 +23,23 @@
     animation-delay: 1000ms;
     animation-timing-function: ease-in-out;
     opacity: 0;
+}
+
+/*------------------------------------*\
+    ::Fill
+\*------------------------------------*/
+@mixin animation--fade-fill($name, $from, $to){
+    @keyframes #{$name} {
+        0% {
+            fill: $from;
+        }
+        100% {
+            fill: $to;
+        }
+    }
+    animation-name: $name;
+    animation-fill-mode: forwards;
+    animation-duration: 1000ms;
+    animation-delay: 1000ms;
+    animation-timing-function: ease-in-out;
 }
