--- a/_sass/stars/zemplate/_mixins.scss
+++ b/_sass/stars/zemplate/_mixins.scss
@@ -1,6 +1,7 @@
 /*------------------------------------*\
     ::Mixins
     ----------------------------------*
+    ::Text Over Light
     ::Strip Unit
     ::Pixels to EMs
     ::Placeholder Color
@@ -10,6 +11,15 @@
     ::Sticky Footer
     ::Nav
 \*------------------------------------*/
+
+/*------------------------------------*\
+    ::Text Over Light
+\*------------------------------------*/
+@mixin text-over-light(){
+    h1, h2, h3, h5, h6 {
+        color: $color-1-dark;
+    }
+}
 
 /*------------------------------------*\
     ::Strip Unit
