--- a/_sass/debris/_shame.scss
+++ b/_sass/debris/_shame.scss
@@ -1,6 +1,15 @@
 /*------------------------------------*\
             (╯°□°）╯︵ ┻━┻
 \*------------------------------------*/
+
+/*------------------------------------*\
+    ::Text Tweaks
+\*------------------------------------*/
+h3 + h4 { // otherwise even with no margins between it's far away
+    margin-top: -.4em;
+    margin-bottom: .4em;
+}
+
 /*------------------------------------*\
     ::Icon Slider Layout
 \*------------------------------------*/
