--- a/_sass/moons/components/timeline/__timeline-global.scss
+++ b/_sass/moons/components/timeline/__timeline-global.scss
@@ -80,4 +80,28 @@
         display: flex;
         flex-wrap: wrap;
     }
+    &__year-list {
+        position: relative;
+        right: -$timeline-width/2;
+        float: right;
+        width: $timeline-width;
+        border: 0 solid $color-2;
+        border-width: 0 $timeline-border-width;
+        margin: 0;
+        padding: 0;
+        @include bp($tab--max){
+            right: 0;
+        }
+        @include bp($phone--max){
+            right: -$timeline-width/2;
+        }
+        @include bp($phone--mid){
+            right: 0;
+        }
+    }
+    &__year {
+        @extend %year;
+        margin: 0;
+        padding-left: 0;
+    }
 }
