--- a/_sass/stars/zemplate/_variables.scss
+++ b/_sass/stars/zemplate/_variables.scss
@@ -82,5 +82,6 @@ $fam--2:            'Signika', sans-serif;
 \*------------------------------------*/
 $timeline-width:            3em;        // timeline bar's width
 $timeline-gaps:             9em;        // each year period's height
+$timeline-gaps--large:      11em;       // each year period's height - larger
 $timeline-border-width:     .1875em;    // all timeline borders
 $year-word-height:          .85em;      // the height of the "20**" word for centering
