--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,8 @@
 <footer class="main-foot">
-    &copy; Tomas Mulder
+    <div class="main-foot__inner">
+        <div class="main-foot__text">
+            <a href="/credits.html" class="main-foot__link">Credits</a>
+            <span class="main-foot__copy">&copy; Tomas Mulder</span>
+        </div>
+    </div>
 </footer>
