--- a/_sass/moons/components/_contact-links.scss
+++ b/_sass/moons/components/_contact-links.scss
@@ -15,6 +15,9 @@
     }
     &__title {
         font-size: 1rem;
+        h2 {
+            margin-bottom: -.5em;
+        }
     }
     &__group {
         display: inline-block;
