--- a/_sass/moons/components/_contact-links.scss
+++ b/_sass/moons/components/_contact-links.scss
@@ -15,9 +15,6 @@
     }
     &__title {
         font-size: 1rem;
-        h2 {
-            margin-bottom: -.5em;
-        }
     }
     &__group {
         display: inline-block;
@@ -26,14 +23,29 @@
         font-size: 1rem;
         text-align: center;
         h3 {
+            margin-top: 0;
             @include bp($min: $phone--max, $max: $tab--mid){
                 font-size: 2.5vw;
             }
         }
     }
     &__icon {
+        display: inline-block;
         width: 3em;
         height: 3em;
-        fill: currentcolor;
+        padding: .3em;
+        border-radius: 50%;
+        transition: 300ms;
+        border: $timeline-border-width solid $color-2;
+        color: $color-2;
+        &:hover {
+            color: $color-1-light;
+            border-color: lighten($color-1,3%);
+        }
+        svg {
+            fill: currentcolor;
+            width: 100%;
+            height: 100%;
+        }
     }
 }
