--- a/_sass/planets/base/_base.scss
+++ b/_sass/planets/base/_base.scss
@@ -14,6 +14,9 @@ img {
 }
 body {
 	margin: 0;
+    @include bp($phone--max){
+        background-color: $color-1-dark;
+    }
 }
 *, *:before, *:after {
     box-sizing: border-box;
