--- a/_sass/moons/components/_contact-links.scss
+++ b/_sass/moons/components/_contact-links.scss
@@ -7,9 +7,8 @@
     left: $gap;
     right: $gap;
     font-size: 0;
-    @include bp($custom: "only screen and (max-height: 699px), only screen and (max-width: #{$phone--max})"){
+    @include bp($custom: "only screen and (max-height: 700px), only screen and (max-width: #{$phone--max})"){
         position: relative;
-        bottom: 0;
         right: 0;
         left: 0;
     }
@@ -24,26 +23,23 @@
         text-align: center;
         h3 {
             margin-top: 0;
-            @include bp($min: $phone--max, $max: $tab--mid){
-                font-size: 2.5vw;
-            }
+            font-size: 1em;
         }
     }
     &__icon {
+        @extend %icon--up;
         display: inline-block;
         width: 3em;
         height: 3em;
         padding: .3em;
         border-radius: 50%;
-        transition: 300ms;
-        border: $timeline-border-width solid $color-2;
-        color: $color-2;
         &:hover {
-            color: $color-1-light;
-            border-color: lighten($color-1,3%);
+            @extend %icon--over;
+        }
+        &:active {
+            @extend %icon--active;
         }
         svg {
-            fill: currentcolor;
             width: 100%;
             height: 100%;
         }
