--- a/_sass/moons/components/_icon-slider.scss
+++ b/_sass/moons/components/_icon-slider.scss
@@ -12,6 +12,7 @@ $icon-slider-speed: 500ms;
         display: none;
     }
     &__link {
+        @extend %icon--up;
         position: relative;
         float: left;
         width: 20%;
@@ -20,13 +21,9 @@ $icon-slider-speed: 500ms;
         padding: .3em;
         border-radius: 100%;
         line-height: 0;
-        transition: 300ms;
         cursor: pointer;
-        border: $timeline-border-width solid $color-2;
-        color: $color-2;
-        &:hover {
-            color: $color-1-light;
-            border-color: lighten($color-1,3%);
+        &:active {
+            @extend %icon--active;
         }
         &:last-of-type {
             &:after {
@@ -41,10 +38,6 @@ $icon-slider-speed: 500ms;
             top: 50%;
             left: 100%;
             border-top: $timeline-border-width solid $color-2;
-        }
-        svg {
-            fill: currentcolor;
-            transition: fill 300ms;
         }
     }
     &__small-frame {
@@ -77,14 +70,13 @@ $icon-slider-speed: 500ms;
         padding: 55% 0 0;
         white-space: normal;
         @include bp($custom: "only screen and (min-height: 700px)"){
-            padding-top: calc(100vh - 600px);
+            padding-top: calc(100vh - 580px);
         }
         @include bp($custom: "only screen and (min-height: 900px)"){
             padding-top: 75%;
         }
     }
     &__stat {
-        backface-visibility: hidden; // so many animations: prevent flashing
         float: left;
         display: inline-block;
         position: static;
@@ -158,10 +150,7 @@ $icon-slider-speed: 500ms;
     // active nav
     &__link:hover,
     input:checked + label {
-        border-color: lighten($color-1,3%);
-        svg {
-            fill: $color-1-light;
-        }
+        @extend %icon--over;
     }
     input {
         @for $i from 1 through 4 {
