Add contact form popup

--- a/_sass/moons/components/_popup.scss
+++ b/_sass/moons/components/_popup.scss
@@ -23,7 +23,7 @@
         padding: 3em $gap $gap;
         background-color: #fff;
         border-radius: .5em;
-        &:after { // offset border
+        &:before { // offset border
             content: "";
             display: block;
             position: absolute;
