--- a/_sass/planets/base/_forms.scss
+++ b/_sass/planets/base/_forms.scss
@@ -23,6 +23,7 @@ button,
 html input[type="button"],
 input[type="reset"],
 input[type="submit"] {
+	@extend %btn;
 	-webkit-appearance: button;
 	cursor: pointer;
 }
@@ -37,7 +38,7 @@ input::-moz-focus-inner {
 }
 input {
 	line-height: normal;
-	&[class*="__trigger"] { // allows inputs to be used as clickable triggers
+	&[class*="__trigger"][type] { // allows inputs to be used as clickable triggers
 		display: none;
 	}
 }
@@ -50,6 +51,85 @@ input[type="number"]::-webkit-inner-spin-button,
 input[type="number"]::-webkit-outer-spin-button {
 	height: auto;
 }
+fieldset {
+	border: 1px solid #c0c0c0;
+	margin: 0 2px;
+	padding: 0.35em 0.625em 0.75em;
+}
+legend {
+	border: 0;
+	padding: 0;
+}
+optgroup {
+	font-weight: bold;
+}
+%input-like-text {
+	width: 100%;
+	margin-bottom: .5em;
+	padding: .5em $pad .5em 4em;
+	background-color: $color-1-dark;
+	min-height: 2.2em;
+	border: 0;
+	color: #fff;
+	border-radius: .2em;
+	// &, /* DEBUG */
+	&:focus {
+		outline: none;
+	}
+	&::placeholder {
+		color: rgba($color-1-light,.6);
+		font-style: italic;
+	}
+}
+input[type="text"],
+input[type="password"],
+input[type="search"],
+input[type="email"],
+input[type="url"],
+input[type="tel"],
+input[type="number"],
+input[type="range"],
+input[type="date"],
+input[type="month"],
+input[type="week"],
+input[type="time"],
+input[type="datetime"],
+input[type="datetime-local"] {
+	@extend %input-like-text;
+}
+textarea {
+	@extend %input-like-text;
+	padding: auto $pad $pad;
+}
+label {@at-root { form { // label styling dependent on siblings only on forms
+	input[type], // for specificity
+	textarea {
+		// &, /* DEBUG */
+		&:focus {
+			& + label {
+				color: $color-1-light;
+			}
+		}
+		& + label {
+			position: relative;
+			display: block;
+			top: -2.2em;
+			height: 0;
+			padding: 0;
+			font-weight: bold;
+			transition: color 300ms;
+			&:not([class*="__trigger"]){
+				font-family: $fam--2;
+				padding-left: .5em;
+			}
+		}
+	}
+	textarea[rows="4"]{
+		& + label {
+			top: -6.25em;
+		}
+	}
+}}}
 input[type="search"] {
 	-webkit-appearance: textfield;
 	-moz-box-sizing: content-box;
@@ -60,18 +140,8 @@ input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-decoration {
 	-webkit-appearance: none;
 }
-fieldset {
-	border: 1px solid #c0c0c0;
-	margin: 0 2px;
-	padding: 0.35em 0.625em 0.75em;
-}
-legend {
-	border: 0;
-	padding: 0;
-}
 textarea {
-	overflow: auto;
-}
-optgroup {
-	font-weight: bold;
+	&[rows="4"] {
+		height: 6em;
+	}
 }
